k8s/ng-frontend-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-frontend-deployment
  labels:
    app: ng-frontend
spec:
  selector:
    matchLabels:
      app: ng-frontend
  template:
    metadata:
      labels:
        app: ng-frontend
    spec:
      containers:
      - name: ng-frontend
        # image: echarin/ng-frontend
        image: gcr.io/${PROJECT_ID}/${FRONTEND_IMAGE}:${TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: "/"
            port: 8080
          initialDelaySeconds: 40
          timeoutSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: ng-frontend-service
  labels:
    app: ng-frontend
spec:
  # This service will be used in the Ingress
  selector:
    app: ng-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
