k8s/ng-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-frontend-deployment
  labels:
    app: ng-frontend
spec:
  selector:
    matchLabels:
      app: ng-frontend
  template:
    metadata:
      labels:
        app: ng-frontend
    spec:
      containers:
      - name: ng-frontend
        image: gcr.io/PROJECT_ID/FRONTEND_IMAGE:F_TAG
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ng-frontend-service
  labels:
    app: ng-frontend
spec:
  # This service will be used in the Ingress
  selector:
    app: ng-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
