k8s/sb-backend-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-backend-deployment
  labels:
    app: sb-backend
spec:
  selector:
    matchLabels:
      app: sb-backend
  template:
    metadata:
      labels:
        app: sb-backend
    spec:
      containers:
      - name: sb-backend
        # image: echarin/sb-backend
        image: gcr.io/${PROJECT_ID}/${BACKEND_IMAGE}:${TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/health/liveness-check"
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: "/health/readiness-check"
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: sb-backend-service
  labels:
    app: sb-backend
spec:
  # Default type is ClusterIP
  selector:
    app: sb-backend
  ports:
  - port: 8080
    targetPort: 8080
