k8s/sb-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-backend-deployment
  labels:
    app: sb-backend
spec:
  selector:
    matchLabels:
      app: sb-backend
  template:
    metadata:
      labels:
        app: sb-backend
    spec:
      containers:
      - name: sb-backend
        image: gcr.io/PROJECT_ID/BACKEND_IMAGE:B_TAG
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: sb-backend-service
spec:
  # Default type is ClusterIP
  selector:
    app: sb-backend
  ports:
  - port: 8080
    targetPort: 8080
