k8s/ng-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ng-ingress
  labels:
    app: ng-frontend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: tfip-miniproject
spec:
  rules:
  - http:
      paths:
      # - pathType: Prefix
      #   path: "/api"
      #   backend:
      #     service:
      #       name: sb-backend-service
      #       port: 
      #         number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ng-frontend-service
            port:
              number: 80
