k8s/sb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-ingress
  labels:
    app: sb-backend
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sb-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: sb-backend-service
            port: 
              number: 8080
